Fix unaligned graph title

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -198,6 +198,7 @@ ul.task-list {
     .graph-title-container {
         display: flex; 
         justify-content: flex-end;
+        width: 320px;
     }
 
     .graph-title {
